# CuraEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  3d-cost-api  CMakeLists.txt  CPackConfig.cmake  Changelog.md  Cura.proto  CuraEngine.cbp  CuraEngine.rc  Dockerfile  Doxyfile  Gemfile  GitVersion.yml  Jenkinsfile  Makefile  Makefile.am  Makefile~  README.md  SliceData.proto  _config.yml  all_database_problems.txt  analyse_applications.sh  analyse_database.sh  analyse_full_database.sh  autoclean.sh  autogen.sh  backup.sh  bridge.cpp  bridge.h  buildEngine.sh  clang-format  clean-build.sh  comb.cpp  comb.h  computation_time_results.csv  (+51 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.idea old/: modules.xml  workspace.xml
.run/: benchmarks.run.xml
CuraEngineJS/: .npmrc  package-lock.json  package.json
benchmark/: CMakeLists.txt  holes.wkt  infill_benchmark.h  main.cpp  scoring_benchmark.h  simplify_benchmark.h  wall_benchmark.h
clipper/: License.txt  README  clipper.cpp  clipper.hpp
cmake/: Common.cmake  DoxygenTarget.cmake  FindGcov.cmake  FindLcov.cmake  FindPolyclipping.cmake  FindStb.cmake  Findcodecov.cmake  Findcppunit.cmake  Findpolyclipping.cmake  Findstb.cmake  GetGitRevisionDescription.cmake  PackageConfigurator.cmake  StandardProjectSettings.cmake  cpack_config_deb_mingw64.cmake  cpack_config_zip_mingw64.cmake  llvm-cov-wrapper  stb_image.h.patch
doc/: architecture_paths_graph.puml  formulae-env-adapters.drawio  path_generation_process.puml  paths_grap_example.puml
docker/: build-mingw64.sh  build.sh  publish-packages.sh
docs/: PULL_REQUEST_TEMPLATE.md  concepts.md  gcode_export.md  generating_areas.md  generating_paths.md  glossary.md  inserts.md  mainpage.md  overview.md  pipeline.md  scene.md  settings.md  simplify.md  slicing.md
documentation/: Link_to_index.html  code_conventions.md  glossary.md  mainpage.md  (+2 more)
libs/clipper/: CMakeLists.txt  License.txt  README  clipper.cpp  clipper.hpp
libs/clipper/polyclipping/: clipper.cpp
stress_benchmark/: CMakeLists.txt  stress_benchmark.cpp  stress_bm_voronoi.cpp
stress_benchmark/resources/: 001.settings  001.wkt  002.settings  002.wkt  003.settings  004.settings  004.wkt  005.settings  005.wkt  006.settings  006.wkt  007.settings  007.wkt  008.settings  008.wkt  009.settings  009.wkt  010.settings  010.wkt  011.settings  011.wkt  012.settings  012.wkt  013.settings  013.wkt  014.settings  014.wkt  015.settings  015.wkt  016.settings  016.wkt  017.settings  017.wkt  018.settings  018.wkt  019.settings  019.wkt  020.settings  020.wkt  021.settings  (+92 more)
stress_benchmark/stress_bm_voronoi_resources/: 003.settings  004.settings
tests/: AntiOozeAmountsTest.cpp  CMakeLists.txt  ClipperTest.cpp  ExtruderPlanTest.cpp  FffGcodeWriterTest.cpp  GCodeExportTest.cpp  GCodeExportTest.h  GCodePlannerTest.cpp  GCodePlannerTest.h  GCodeTemplateResolverTest.cpp  GcodeLayerThreaderTest.cpp  GcodeLayerThreaderTest.h  InfillTest.cpp  LayerPlanTest.cpp  LayerPlanTest.h  LinearAlg2DTest.cpp  LinearAlg2DTest.h  MergeInfillLinesTest.cpp  MeshGroupTest.cpp  PathOrderMonotonicTest.cpp  PathOrderOptimizerTest.cpp  PolygonUtilsTest.cpp  PolygonUtilsTest.h  ReadTestPolygons.cpp  ReadTestPolygons.h  ReadTestSettings.cpp  ReadTestSettings.h  SupportTest.cpp  SupportTest.h  TextureDataProviderTest.cpp  TimeEstimateCalculatorTest.cpp  TimeEstimateCalculatorTest.h  VoronoiCrashTest.cpp  WallsComputationTest.cpp  cube_vertices.txt  main.cpp  polygons.txt  runtest.py  support.stl  testModel.stl  (+2 more)
tests/allround_test/: 3DHackerTest.stl  How to perform the tests.txt  TortureTestV2.stl  ctrlV_3D_test.stl
tests/allround_test/15.04/: UltimakerRobot_support_2015_no_support.gcode  ctrlV_3D_test_no_support.gcode
tests/allround_test/2.0/: UM2_UltimakerRobot_support_2015.gcode  UM2_ctrlV_3D_test.gcode
tests/arcus/: ArcusCommunicationPrivateTest.cpp  ArcusCommunicationPrivateTest.h  ArcusCommunicationTest.cpp  ArcusCommunicationTest.h  MockCommunication.h  MockSocket.cpp  MockSocket.h
tests/beading_strategy/: CenterDeviationBeadingStrategyTest.cpp
tests/fuzz/: CMakeLists.txt  FuzzGcodeExport.cpp  oss-fuzz-build.sh
tests/infill/: Cross3DTest.cpp  Cross3DTest.h  FractalInfillTest.cpp  FractalInfillTest.h  SierpinskiFillTest.cpp  SierpinskiFillTest.h  SpaceFillingTreeFillTest.cpp  SpaceFillingTreeFillTest.h  SquareSubdivTest.cpp  SquareSubdivTest.h
tests/integration/: SlicePhaseTest.cpp
tests/integration/resources/: cube.stl  cylinder1000.stl
tests/pathPlanning/: ArcPathCalculatorTest.cpp
tests/resources/: polygon_concave.txt  polygon_concave_hole.txt  polygon_letter_y.txt  polygon_sawtooth.txt  polygon_square.txt  polygon_square_hole.txt  polygon_triangle.txt  polygon_two_squares.txt  polygons.txt  slice_polygon_1.txt  slice_polygon_2.txt  slice_polygon_3.txt  slice_polygon_4.txt
tests/settings/: SettingsTest.cpp  SettingsTest.h
tests/src/pathPlanning/: CombTest.cpp
tests/utils/: AABB3DTest.cpp  AABB3DTest.h  AABBTest.cpp  AABBTest.h  BucketGrid2DTest.cpp  BucketGrid2DTest.h  CoordTTest.cpp  ExtrusionLineTest.cpp  FingerTreeTest.cpp  FingerTreeTest.h  GeometryTest.cpp  IntPointTest.cpp  IntPointTest.h  LinearAlg2DTest.cpp  LinearAlg2DTest.h  MappingFunctionTest.cpp  MappingFunctionTest.h  MathTest.cpp  MinimumSpanningTreeTest.cpp  MinimumSpanningTreeTest.h  PolygonConnectorTest.cpp  PolygonConnectorTest.h  PolygonTest.cpp  PolygonTest.h  PolygonUtilsTest.cpp  PolygonUtilsTest.h  SimplifyTest.cpp  SmoothTest.cpp  SparseGridTest.cpp  SparseGridTest.h  StringTest.cpp  StringTest.h  TemplateTest.cpp  TemplateTest.h  UnionFindTest.cpp  UnionFindTest.h  ViewTest.cpp  VoxelUtilsTest.cpp
tests/voronoi_crash_resources/: settings_001.txt  settings_002.txt  settings_003.txt  settings_004.txt  settings_005.txt  settings_006.txt  settings_007.txt  settings_008.txt  slice_polygon_001.txt  slice_polygon_002.txt  slice_polygon_003.txt  slice_polygon_003.wkt  slice_polygon_004.txt  slice_polygon_005.txt  slice_polygon_006.txt  slice_polygon_007.txt  slice_polygon_008.txt
(+1423 files in other folders)
